design settings page

--- a/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
@@ -2,21 +2,29 @@
 
 @attribute [Authorize]
 
+@using HomeCloud.Maps.Client.Dialogs
+
 @inject IWebAPIClient Client
+@inject IDialogService Dialog
 
-<h3>Settings</h3>
 
-<div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Komoot User Id</label>
-    <input class="form-control" aria-describedby="emailHelp" @bind="@userSettings.KomootUserId" />
-</div>
-<button class="btn btn-primary" @onclick="@OnSubmitAsync">Submit</button>
+<MudText Typo="Typo.h5" Class="mb-5">Sync Komoot</MudText>
 
-<div class="mb-3">
-    <label>Cookie</label>
-    <input class="form-control" @bind="@komootToursRequest.Cookies" />
-</div>
-<button @onclick="OnUpdateKommotTourAsync">Update Komoot Tours</button>
+<MudTextField @bind-Value="userSettings.KomootUserId"
+              Label="Komoot-UserId"
+              Variant="Variant.Outlined"
+              Class="mr-5"
+              Style="width: 200px" />
+
+<MudToolBar Class="d-flex justify-start ml-n3 mt-3">
+    <MudButton Variant="Variant.Filled"
+               Color="Color.Primary"
+               @onclick="OnSubmitAsync"
+               Class="mr-3">Save</MudButton>
+    <MudButton Variant="Variant.Filled"
+               Color="Color.Primary"
+               @onclick="OnUpdateKommotTourAsync">Sync Tours</MudButton>
+</MudToolBar>
 
 @code {
     private UserSettingsDto userSettings = new UserSettingsDto();
@@ -33,8 +41,9 @@
         await Client.SendAsync(x => x.PostUserSettingsAsync(userSettings));
     }
 
-    private async Task OnUpdateKommotTourAsync()
+    private void OnUpdateKommotTourAsync()
     {
-        await Client.SendAsync(x => x.PostToursAsync(komootToursRequest));
+        //await Client.SendAsync(x => x.PostToursAsync(komootToursRequest));
+        Dialog.Show<SyncKomootDialog>("Sync Komoot Tours");
     }
 }
