--- a/src/frontend/HomeCloud.Maps.Client/Components/SelectPage.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Components/SelectPage.razor
@@ -1,6 +1,4 @@
-﻿@typeparam TItem
-
-<MudText Typo="Typo.body2" Class="mud-table-pagination-caption">
+﻿<MudText Typo="Typo.body2" Class="mud-table-pagination-caption">
     Rows per Page
 </MudText>
 
