--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
@@ -5,16 +5,17 @@
 @inject IWebAPIClient Client
 @inject NavigationManager Navigation
 
-<GridPagination Title="Tours" SearchFunction="SearchAsync">
+<GridPagination Title="Tours" 
+                SearchFunction="SearchAsync"
+                ItemClicked="@(x => Navigation.NavigateTo($"tours/{x.TourId}"))"
+                TItem="TourInfoDto">
     <ItemContent Context="tour">
         <MudToolBar>
             <img src="@(CreateImageUrl(tour.ImageUrl))" class="ml-n5">
-            <div class="ml-5">
+            <div style="width: 100%">
                 <MudText Typo="Typo.h6" Class="mt-n3">@tour.Name</MudText>
-                <div class="ml-2">
-                    <MudText>Date: @(tour.Date.ToString())</MudText>
-                    <MudText>Distance:  @(tour.Distance)</MudText>
-                </div>
+                <MudText>Date: @(tour.Date.ToString())</MudText>
+                <MudText>Distance:  @(tour.Distance)</MudText>
             </div>
             <MudToolBarSpacer />
         </MudToolBar>
