--- a/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
@@ -30,7 +30,7 @@
     </MudDrawer>
     <MudMainContent Class="mudblazor-main-content">
         <MudContainer>
-            <MudPaper Elevation="3" Class="pa-5 mt-10">
+            <MudPaper Elevation="3" Class="pa-5 mt-10 mb-10">
                 @Body
             </MudPaper>
         </MudContainer>
