--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
@@ -11,21 +11,23 @@
                 TItem="TourInfoDto">
     <ItemContent Context="tour">
         <MudToolBar>
-            <img src="@(CreateImageUrl(tour.ImageUrl))" class="ml-n5">
-            <div style="width: 100%">
-                <MudText Typo="Typo.h6" Class="mt-n3">@tour.Name</MudText>
-                <MudText>Date: @(tour.Date.ToString())</MudText>
-                <MudText>Distance:  @(tour.Distance)</MudText>
+            <img src="@(CreateImageUrl(tour.ImageUrl))" 
+                 class="ml-n10 mr-8">
+            <div>
+                <MudText Typo="Typo.h6"
+                         Style="text-align: start">@tour.Name</MudText>
+                <MudText Style="text-align: start">Date: @(tour.Date.ToString())</MudText>
+                <MudText Style="text-align: start">Distance:  @(tour.Distance)</MudText>
             </div>
             <MudToolBarSpacer />
         </MudToolBar>
     </ItemContent>
     <SkeletonItemContent>
-        <MudToolBar>
+        <MudToolBar Class="pa-11">
             <MudSkeleton SkeletonType="SkeletonType.Rectangle"
                          Height="100px"
                          Width="100px"
-                         Class="ml-n5" />
+                         Class="ml-n10" />
             <div class="ml-5">
                 <MudSkeleton SkeletonType="SkeletonType.Rectangle"
                              Height="20px"
@@ -41,6 +43,16 @@
             <MudToolBarSpacer />
         </MudToolBar>
     </SkeletonItemContent>
+    <EmptyContent>
+        <MudToolBar Class="d-flex justify-center"
+                    Style="width: 100%;
+                           margin-top: 75px;">
+            <MudIcon Icon="@Icons.Material.Filled.Search"
+                     Size="Size.Large"
+                     Class="mr-3"/>
+            <MudText Typo="Typo.h6">No Result</MudText>
+        </MudToolBar>
+    </EmptyContent>
 </GridPagination>
 
 @code {
